# visual_information_and_political_participation

./: .gitignore  README.md  pyproject.toml
src/: chapter_3.qmd
src/prr/: dcr_color_and_deliberation_prr.qmd  visualInfluenceOnDeliberationPRR.qmd
src/prr/R/: model.R  plot.R  sample.R
src/prr/STAN/: study_1_model_1.stan  study_1_model_2.stan  study_1_model_2_alt.stan
test/: test_model.R  test_plot.R  test_sample.R
