[tool.poetry]
name = "visual-information-and-political-participation"
version = "0.1.0"
description = "Book chapter examining the role that visual information has on political participation"
authors = ["Damon C. Roberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"
packages = [{include = "visual_information_and_political_participation"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
